camila-orchestrator/int/k8s/kind/API/camila-product-api.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: camila-product-api-ns
  labels:
      name: camila-product-api-ns
spec: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: camila-product-api
  name: camila-product-api
  namespace: camila-product-api-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: camila-product-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  minReadySeconds: 0
  revisionHistoryLimit: 5
  template:
    metadata:
      labels:
        app: camila-product-api
    spec:
      containers:
        - image: docker.io/library/camila-product-api:1.0.0
          name: camila-product-api
          resources:
            limits:
              cpu: "2"
              memory: 1024Mi
              ephemeral-storage: "1Gi"
            requests:
              cpu: "1"
              memory: 1024Mi
              ephemeral-storage: "1Gi"
          imagePullPolicy: Never
          ports:
            - name: api-port
              containerPort: 8080
              hostPort: 8080
              protocol: TCP
            - name: rsocket-port
              containerPort: 7000
              hostPort: 7000
            - name: grpc-port
              containerPort: 6565
              hostPort: 6565
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          startupProbe:
            httpGet:
              path: /product-int/api/actuator/health/ping
              port: api-port
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /product-int/api/actuator/health/readiness
              port: api-port
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /product-int/api/actuator/health/liveness
              port: api-port
            initialDelaySeconds: 10
            periodSeconds: 30
          volumeMounts:
            - name: "camila-product-api-data-dir"
              mountPath: "/tmp"
      automountServiceAccountToken: false
      volumes:
        - name: "camila-product-api-data-dir"
          persistentVolumeClaim:
            claimName: "camila-product-api-data"
            readOnly: false

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: camila-product-api
  name: camila-product-api-nodeport-svc
  namespace: camila-product-api-ns
spec:
  ports:
    - name: api-port
      port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 30080
    - name: rsocket-port
      port: 7000
      protocol: TCP
      targetPort: 7000
      nodePort: 30070
    - name: grpc-port
      port: 6565
      protocol: TCP
      targetPort: 6565
      nodePort: 30065
    - name: jmx-port
      port: 5005
      protocol: TCP
      targetPort: 5005
      nodePort: 30005
  selector:
    app: camila-product-api
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: camila-product-api-ns
spec:
  type: ExternalName
  externalName: mongo-nodeport-svc.mongodb.svc.cluster.local

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: camila-product-api-ingress
  namespace: camila-product-api-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
    nginx.ingress.kubernetes.io/cors-expose-headers: "Content-Length,Content-Range"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-max-age: "3600"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /product-int/api
            backend:
              service:
                name: camila-product-api-nodeport-svc
                port:
                  number: 30080
          - pathType: Prefix
            path: /product-int/api/rsocket
            backend:
              service:
                name: camila-product-api-nodeport-svc
                port:
                  number: 30070
          - pathType: ImplementationSpecific
            path: /product.ProductService/GetProductByInternalId
            backend:
              service:
                name: camila-product-api-nodeport-svc
                port:
                  number: 30065
          - pathType: ImplementationSpecific
            path: /product.ProductService/SortByMetricsWeights
            backend:
              service:
                name: camila-product-api-nodeport-svc
                port:
                  number: 30065
